rust-automata/tests/fail/unknown_state.stderr
error: cannot find attribute `automaton` in this scope
 --> tests/fail/unknown_state.rs:8:3
  |
8 | #[automaton(
  |   ^^^^^^^^^

warning: unused import: `rust_automata::*`
 --> tests/fail/unknown_state.rs:1:5
  |
1 | use rust_automata::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
